--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,12 @@ header {
     color: #333;
 }
 
+.vagas a {
+    font-size: 120%;
+    color: #333;
+    text-decoration: none;
+}
+
 .todasVagas {
     width: 246px;
     height: 57px;
@@ -316,6 +322,12 @@ header {
     background: #3B95D3;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     font-size: 120%;
+}
+
+.todasVagas a {
+    font-size: 120%;
+    color: #333;
+    text-decoration: none;
 }
 
 .todasVagas:hover {
